layout updates, bug fixes

--- a/index.html
+++ b/index.html
@@ -47,15 +47,15 @@
       </div>
     </div>
     <!-- Area to Show the Unique Cocktail  -->
-    <div class="row resultcontainer">
+    <div class="resultcontainer">
       
     </div>
     <!-- Show Nine Random Cocktails -->
     <div class="row">
-      <div class="col-lg mx-auto">
+      <div class="col-lg">
         <h1 class="text-center">Today's Drinks</h1>
         <p>All cocktails display randomly. If you see a cocktail you like, screenshot it!</p>
-        <div class="cocktailholder card-columns mx-auto">
+        <div class="cocktailholder card-columns">
           
         </div>
       </div>
