bug fixes - information in moody class

--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
         <div class="formcontainer">
           <form class="cocktailsearch">
             <!-- Dropdown for ingredients-->
-            <div class="form-group">
+            <div class="form-group text-center">
               <label for="findDrink">Find a Drink</label>
               <input type="text" name="searchTerm" id="searchTerm">
-              <small class="form-text text-muted">What are you in the mood for?</small>
+              <small class="form-text moody">What are you in the mood for?</small>
             </div>
             <button type="submit" class="formSubmit btn btn-info btn-block ">Get My Drink!</button>
           </form>
