--- a/public/index.html
+++ b/public/index.html
@@ -25,8 +25,8 @@
 
   <div class="jumbotron jumbrotron-fluid bg-info text-white">
     <div class="container">
-      <h1 class="display-1">Cocktail Search</h1>
-      <p class="lead">Welcome to my cocktail search! You can search for you own cocktail or make a random cocktail from the below selection!</p>
+      <h1 class="display-3 text-center">David's Cocktail Search</h1>
+      <p class="lead">Welcome to my cocktail search! You can search for you own cocktail, or pick a random cocktail from the selection below!</p>
     </div>
   </div>
   <div class="container">
@@ -40,8 +40,8 @@
               <label for="findDrink">Find a Drink</label>
               <input type="text" name="searchTerm" id="searchTerm">
               <small class="form-text moody">What are you in the mood for?</small>
-            </div>
-            <button type="submit" class="formSubmit btn btn-info btn-block ">Get My Drink!</button>
+            <!-- </div> -->
+            <button type="submit" class="formSubmit btn btn-info btn-lg">Get My Drink!</button>
           </form>
         </div>
       </div>
@@ -51,9 +51,9 @@
       
     </div>
     <!-- Show Nine Random Cocktails -->
-    <div class="row">
+    <div class="row text-center">
       <div class="col-lg">
-        <h1 class="text-center">Today's Drinks</h1>
+        <h1 >Today's Drinks</h1>
         <p>All cocktails display randomly. If you see a cocktail you like, screenshot it!</p>
         <div class="cocktailholder card-columns">
           
