update card style

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-123350711-2"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
+    function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
 
     gtag('config', 'UA-123350711-2');
@@ -25,8 +25,9 @@
 
   <div class="jumbotron jumbrotron-fluid bg-info text-white">
     <div class="container">
-      <h1 class="display-3 text-center">David's Cocktail Search</h1>
-      <p class="lead">Welcome to my cocktail search! You can search for you own cocktail, or pick a random cocktail from the selection below!</p>
+      <h1 class="display-4 text-center">Cocktail Search</h1>
+      <p class="lead">Welcome to my cocktail search! You can search for you own cocktail, or pick a random cocktail from
+        the selection below!</p>
     </div>
   </div>
   <div class="container">
@@ -40,23 +41,25 @@
               <label for="findDrink">Find a Drink</label>
               <input type="text" name="searchTerm" id="searchTerm">
               <small class="form-text moody">What are you in the mood for?</small>
-            <!-- </div> -->
-            <button type="submit" class="formSubmit btn btn-info btn-lg">Get My Drink!</button>
+              <button type="submit" class="formSubmit btn btn-info btn-lg">Get My Drink!</button>
+            </div>
           </form>
         </div>
       </div>
     </div>
     <!-- Area to Show the Unique Cocktail  -->
     <div class="resultcontainer">
-      
+
     </div>
+  </div>
     <!-- Show Nine Random Cocktails -->
+  <div class="container">
     <div class="row text-center">
       <div class="col-lg">
-        <h1 >Today's Drinks</h1>
+        <h1>Today's Drinks</h1>
         <p>All cocktails display randomly. If you see a cocktail you like, screenshot it!</p>
         <div class="cocktailholder card-columns">
-          
+
         </div>
       </div>
     </div>
